fix: burger overflow

--- a/src/Components/Header/SideBar/sidebar.scss
+++ b/src/Components/Header/SideBar/sidebar.scss
@@ -1,5 +1,6 @@
 @use '../../../styles/partials/global';
 .sidebar {
+  overflow: hidden;
   @include global.desktop {
     display: flex;
     align-items: center;
